--- a/src/main/webapp/css/mypage_reviewBefore.css
+++ b/src/main/webapp/css/mypage_reviewBefore.css
@@ -81,7 +81,7 @@
 
 .mypage_reviewBefore_can {
 	width: 100%;
-	height: 300px;
+	height: 200px; /* 상품내용 부분 높이조절 */
 	text-align: center;
 }
 
@@ -96,7 +96,7 @@
 	text-align: center;
 	font-size: 15px;
 	font-weight: 500;
-	border-bottom: 1px solid #aaaaaa;
+	border-bottom: 1px solid #eeeeee;
 }
 
 #mypage_reviewBefore_td {
