--- a/src/main/webapp/css/mypage_subscribe.css
+++ b/src/main/webapp/css/mypage_subscribe.css
@@ -90,7 +90,7 @@
 
 .mysubscribe_order_none {
 	width: 100%;
-	height: 300px;
+	height: 200px; /* 상품내용 부분 높이조절 */
 	text-align: center;
 }
 
@@ -105,7 +105,7 @@
 	text-align: center;
 	font-size: 15px;
 	font-weight: 500;
-	border-bottom: 1px solid #aaaaaa;
+	border-bottom: 1px solid #eeeeee;
 }
 
 #mysubscribe_order_td {
