--- a/src/main/webapp/css/anniversary.css
+++ b/src/main/webapp/css/anniversary.css
@@ -32,16 +32,18 @@
     color: #333;
 }
 
-.anniversary_container .ann_content_box {
-	margin-top: 30px;
+.anniversary_container .ann_content_box {	
+	margin: 30px auto;
+	padding: 5px auto;
+	text-align: center;
 }
 
 .anniversary_container .ann_content_box .inbox {
 	 position: relative;
+	 display: inline-block;
 }
 
 .anniversary_container .ann_content_box .inbox .inner {
-	max-width: 490;
     margin: 0 5px;
 }
 
@@ -76,7 +78,7 @@
 .ann_content_box .row .ann_input {
 	margin-top: 0;
     overflow: hidden;
-    padding-right: 30px;
+    padding-right: 10px;
     position: relative;
     display: block;
 }
@@ -110,8 +112,16 @@
     color: #222;
 }
 
+.ann_content_box .ann_submit_row {
+	display: block;
+    margin: 0;
+	padding: 10px 0;
+	text-align: center;
+}
+
+
 .ann_submit_area {
-	margin: 15px 40px;
+	margin: 15px auto;
 }
 
 .ann_submit_area .btn_submit {
@@ -130,4 +140,5 @@
     letter-spacing: -.21px;
     color: #222;
     text-align: center;
+    display: inline-block;
 }
