--- a/src/main/webapp/css/mypage_orderHistory.css
+++ b/src/main/webapp/css/mypage_orderHistory.css
@@ -102,7 +102,7 @@
 #mypage_orderHistory_td {
 	margin: 0;
 	text-align: left;
-	border-bottom: 1px solid #aaaaaa;
+	border-bottom: 1px solid #eeeeee;
 }
 
 #mypage_orderHistory_img {
