--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -96,6 +96,7 @@ a, button {
 	width: 300px;
 	height: 50px;
 	margin: 10px;
+	padding: 0 20px; /*로그인창 여백*/
 	text-align: left;
 	font-size: medium;
 }
