--- a/src/main/webapp/css/mypage_subscribe.css
+++ b/src/main/webapp/css/mypage_subscribe.css
@@ -6,15 +6,6 @@
 	display: flex;
 }
 
-/* .tabs li { */
-/* 	background: none; */
-/* 	cursor: pointer; */
-/* 	font-size: 15px; */
-/* 	color: #8e8d8d; */
-/* 	font-weight: 300; */
-/* 	padding: 13px 136px; */
-/* } */
-
 .tabs li{
 	width: 360px;
 	background: none;
@@ -104,37 +95,41 @@
 #mysubscribe_order_situation {
 	text-align: center;
 	font-size: 15px;
-	font-weight: 500;
 	border-bottom: 1px solid #eeeeee;
+	font-weight: 400;
+	color: #222;
+}
+
+#mysubscribe_order_situation span {
+	font-size: 12px;
+	font-weight: 500;
+	color: #49e497;
 }
 
 #mysubscribe_order_td {
-	margin: 0;
 	text-align: left;
+	border-bottom: 1px solid #eeeeee;
 }
 
 #mysubscribe_order_img {
-	width: 100px;
-	height: auto;
-	background: no-repeat;
-	background-size: contain;
-	padding: 0;
+	width: 120px;
+	height: 120px;
 	float: left;
+	margin-right: 20px;
 }
 
 #mysubscribe_order_span_one {
-	font-weight: 500;
-	margin: 10px;
+	font-weight: 400;
+	margin: 7px;
 	font-size: 15px;
-	text-align: center;
+	color: #222;
 }
 
 #mysubscribe_order_span_two {
-	/* 	color: #aaaaaa; */
-	margin: 10px;
-	font-size: 15px;
+	margin: 3px;
+	font-size: 13px;
 	font-weight: 300;
-	text-align: center;
+	color: #999999;
 }
 
 #mysubscribe_order_btn {
@@ -154,3 +149,15 @@
 	/* 	margin-top: 150px; */
 	line-height: 2.0;
 }
+
+#mysubscribe_order_td dt {
+	text-align: left;
+} 
+
+#mysubscribe_order_td dl {
+	height: 160px;
+	padding: 22px 0 0px 20px;
+	border-right: solid 1px #eeeeee;
+	border-left: solid 1px #eeeeee;
+}
+
