--- a/src/main/webapp/css/update.css
+++ b/src/main/webapp/css/update.css
@@ -233,7 +233,7 @@ a, button {
 }
 
 .update_box .inbox .anniversary_box .anniversary {
-	border: 1px solid #ffca18;
+	border: 1px solid #ffcd32;
 	border-radius: 5px;
 	margin: 10px 10px;
 	padding: 30px 30px;
@@ -387,6 +387,10 @@ a, button {
     font-weight: 300;
     letter-spacing: -.21px;
     border-radius: 5px;
+}
+
+.member_submit .member_update .btnUpdate:hover {
+	background: #ffcd32;	
 }
 
 .member_submit .member_delete .row_del {
