--- a/src/main/webapp/css/mypage_subscribe.css
+++ b/src/main/webapp/css/mypage_subscribe.css
@@ -156,7 +156,7 @@
 
 #mysubscribe_order_td dl {
 	height: 160px;
-	padding: 22px 0 0px 20px;
+	padding: 22px 0 0 20px;
 	border-right: solid 1px #eeeeee;
 	border-left: solid 1px #eeeeee;
 }
