--- a/src/main/webapp/css/mypage.css
+++ b/src/main/webapp/css/mypage.css
@@ -261,3 +261,18 @@ strong {
     font-size: 14px;
 }
 
+.mypage_left_div #mypage_list .point_up {
+	color: #46cfa7;
+	text-align: left;
+	padding-left: 73px;
+	font-size: 13px;
+	font-weight: 300;
+}
+
+.mypage_left_div #mypage_list .anniversary {
+	color: #999999;
+	text-align: left;
+	padding-left: 45px;
+	font-size: 13px;
+	font-weight: 300;
+}
