--- a/src/main/webapp/css/visitor_login.css
+++ b/src/main/webapp/css/visitor_login.css
@@ -69,7 +69,7 @@ a, button {
 	height: 50px;
 	margin: 10px;
 	border-radius: 10px;
-	background-color: #7FFFD4;
+	background-color: #46cfa7;
 	border: none;
 	font-size: 15px;
 	font-weight: 500;
