--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
 
+input[onclick]
+
+
 #main_container {
 	display: block;
 	padding-top: 60px 0;
@@ -158,6 +161,7 @@
     font-weight: 500;
     letter-spacing: -.24px;
     color: #222;
+    cursor: pointer;
 }
 
 .main_item_pricebox {
@@ -275,6 +279,7 @@
 .main_subbanner {
 	display: block;
 	width: 100vw;
+	cursor: pointer;
 }
 
 .main_subbanner div {
@@ -301,6 +306,7 @@
 	position: relative;
 	width: 48%;
 	overflow: hidden;
+	cursor: pointer;
 }
 
 .main_Class_mainImg {
@@ -335,6 +341,7 @@
 .main_class_submig {
     width: 45%;
     display: inline-block;	
+    cursor: pointer;
 }
 
 .main_class_submig img {
