--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -23,7 +23,7 @@ li {
 a,
 a:active,
 a:visited {
-  color: black;
+  color: #222;
   text-decoration: none;
 }
 
@@ -53,33 +53,35 @@ a, input[type=button], button, input[type=submit] {
 .loginbutton {
 	background: #ffcd32;
 	border: none;
-	border-radius: 10px;
+	border-radius: 5px;
 	width: 300px;
 	height: 50px;
 	margin: 20px;
 	font-weight: 700;
-	font-size: large;
+	font-size: 15px;
+	color: #222;
 }
 
 .joinbutton {
-	background: #46cfa7;
+	background: #74cca9;
 	border: none;
-	border-radius: 10px;
+	border-radius: 5px;
 	width: 300px;
 	height: 50px;
-	margin: 10px;
+	margin: 20px 10px 10px 10px;
 	font-weight: 700;
-	font-size: large;
+	font-size: 15px;
+	color: white;
 }
 .loginsubmit {
 	background: #ececec;
 	border: none;
-	border-radius: 10px;
+	border-radius: 5px;
 	width: 300px;
 	height: 50px;
 	margin: 10px;
 	font-weight: 700;
-	font-size: large;
+	font-size: 15px;
 	color: #787878;
 }
 
@@ -92,13 +94,13 @@ a, input[type=button], button, input[type=submit] {
 
 #inp {
 	border: 1px solid #969696;
-	border-radius: 10px;
+	border-radius: 5px;
 	width: 300px;
 	height: 50px;
 	margin: 10px;
 	padding: 0 20px; /*로그인창 여백*/
 	text-align: left;
-	font-size: medium;
+	font-size: 15px;
 }
 
 #fin {
@@ -114,9 +116,9 @@ a, input[type=button], button, input[type=submit] {
 
 #sns, #now {
 	margin-top: 20px;
-	margin-bottom: 10px;
-	font-weight: 700;
-	font-size: small;
+	font-weight: 400;
+	font-size: 13px;
+	color: #222;
 }
 
 #checklogin {
