--- a/src/main/webapp/css/admin_class_list.css
+++ b/src/main/webapp/css/admin_class_list.css
@@ -60,7 +60,7 @@
 }
 #class_subject{
 	
-	font-family: 'Jua', sans-serif;
+	font-family: 'Gowun Dodum', sans-serif;;
 }
 #class_subject:hover {
 	color: #FFDF24;
