--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -41,6 +41,7 @@ input[onclick]
     letter-spacing: -.45px;
     color: #222;	
     margin-bottom: 25px;
+    position: relative;
 }
 
 .main_title span:last-child {
@@ -206,6 +207,10 @@ input[onclick]
 .main_section {
     width: 1120px;
     margin: 0 auto;
+}
+
+.main_section > div {
+	position:relative;
 }
 
 .main_more {
