--- a/src/main/webapp/css/mypage_class.css
+++ b/src/main/webapp/css/mypage_class.css
@@ -21,17 +21,26 @@
 }
 
 .myclass_list_head th {
+	padding: 20px 9px;
+	border-top: #d0d0d0 1px solid;
+	background-color: #f7f7f7;
+	
+}
+
+.myclass_list_head2 th {
 	padding: 20px;
 	border-top: #d0d0d0 1px solid;
 	background-color: #f7f7f7;
 	
 }
 
-.myclass_list_head th:first-child {
+.myclass_list_head th:first-child,
+.myclass_list_head2 th:first-child {
 	border-right: #ececec 1px solid;
 }
 
-.myclass_list_head th span {
+.myclass_list_head th span,
+.myclass_list_head2 th span {
 	display: inline-block;
     font-size: 15px;
     font-weight: 500;
@@ -46,6 +55,10 @@
 #past_myclass_list tr td:first-child {
 	font-size: 16px;
     text-align: center;	
+}
+
+#planned_myclass_list tr td:last-child {
+	text-align: center;
 }
 
 .myclass_info_box {
@@ -68,6 +81,7 @@
 .myclass_info_box div:first-child h4 {
 	display: inline-block;
 	font-size: 16px;
+	cursor: pointer;
 }
 
 .myclass_info_box div {
@@ -110,8 +124,18 @@
 }
 
 
+.class_cancle_btn {
+    width: 95px;
+    height: 38px;
+    font-size: 14px;
+    border: none;
+    border-radius: 4px;	
+}
 
-
+.class_cancle_btn:hover {
+	color:black;
+	background-color: #FFD228;
+}
 
 
 
