--- a/src/main/webapp/css/update.css
+++ b/src/main/webapp/css/update.css
@@ -235,7 +235,7 @@ a, button {
 .update_box .inbox .anniversary_box .anniversary {
 	border: 1px solid #ffcd32;
 	border-radius: 5px;
-	margin: 10px 10px;
+	margin: 25px 10px 10px;
 	padding: 30px 30px;
 }
 
