--- a/src/main/webapp/css/admin_main.css
+++ b/src/main/webapp/css/admin_main.css
@@ -5,11 +5,11 @@
 		width: 900px;
 	}
 	#income_anal h1 {
-		margin-top: 10px;
+		margin-top: 17px;
 		margin-right: 20px;
-		margin-bottom: 40px;
+		margin-bottom: 20px;
 		border: 2px solid #ddd;
-		border-radius: 10px;
+		border-radius: 5px;
 		padding: 30px;
 		width: 280px;
 		font-size: 28px;
@@ -24,9 +24,9 @@
 	#chart,#recent_review {
 		width: 800px;
 		padding: 40px;
-		border-radius: 10px;
+		border-radius: 5px;
 		border: 2px solid #ddd;
-		margin-bottom: 50px;
+		margin-bottom: 27px;
 	}
 	#items {
 		float:right;
@@ -34,7 +34,7 @@
 		border: 2px solid #ddd;
 		padding: 10px;
 		margin-bottom: 10px;
-		border-radius: 10px;
+		border-radius: 5px;
 	}
 	.item {
 		margin-bottom: 10px;
@@ -46,4 +46,42 @@
 	}
 	.star {
 		color:#FFDF24;
+	}
+	
+	#reviewList {
+	margin-top: 30px;
+	margin-bottom: 50px;
+	width: 800px;
+	text-align: center;
+	border: 1px solid #ececec;
+	border-collapse: collapse;
+	border-radius: 10px;
+	}
+	
+	.dash_table_volume_th,
+	.dash_table_volume > td {
+		padding: 10px;
+	}
+	.dash_table_volume {
+		background-color: #f7f7f7;
+	}
+	.dash_table_volume:hover {
+		background-color: #ffdf243b;
+	}
+	
+	.container {
+		margin: 100px auto;
+		width: 1240px;
+		padding-left:60px;
+	}
+	
+	.container legend {
+		padding: 10px;
+		font-size: 25px;
+	}
+	
+	.admin_review_content {
+	    line-height: 70px;
+	    text-align: left;
+	    padding: 0 59px;
 	}
