--- a/src/main/webapp/css/admin_member_detail.css
+++ b/src/main/webapp/css/admin_member_detail.css
@@ -1,59 +1,87 @@
 @charset "UTF-8";
 
+
+.container {
+	margin: 100px auto 160px;
+    width: 1240px;
+    padding-left: 60px;
+}
+
+.container > div {
+    padding: 15px;
+    font-size: 25px;
+}
+
 .container table {
-		border-collapse: collapse;
-		border: 1px solid #ececec;
-		width: 900px;
-		text-align: center;
-	}
-	.container table th {
-		background-color: #f7f7f7;
-	}
-	.container table td,th {
-		padding: 5px;
-	}
-	.container table tr:hover {
-		background-color: #FFDF24;
-	}
-	.container label {
-		float:left;
-		width: 150px;
-		font-size: 15px;
-		font-weight: bold;
-		margin-left: 15px;
-	}
-	.container input[type=text]{
-		border:none;
-		outline: none;
-		margin-bottom: 10px;
-		font-size: 14px;
-	}
-	.container fieldset {
-		padding: 20px;
-		border-radius: 5px;
-		width: 950px;
-		border: 2px solid #FFCD12;
-		margin-bottom: 25px;
-	}
-	.container legend {
-		padding: 15px;
-		font-size: 20px;
-	}
-	.container [id^='content_'] {
-		background-color: #FAF4C0;
-	}
-	#reviewList tr {
-		cursor: pointer;
-	}
-	#listBtn {
-		width: 100px;
-		height: 40px;
-		border: 1px solid #fff;
-		border-radius: 5px;
-		background-color: #FFDF24;
-		margin-left: 850px;
-	}
-	#listBtn:hover {
-		background-color: #FFCD12;
-		cursor: pointer;
-	}
+    border-collapse: collapse;
+    border: 1px solid #ececec;
+    width: 100%;
+    text-align: center;
+    line-height: 35px;
+    font-size: 16px;
+}
+.container table th {
+	background-color: #f7f7f7;
+}
+.container table td,th {
+	padding: 5px;
+}
+.container table tr:hover {
+	background-color: #ffdf243b;
+}
+.container label {
+	float: left;
+    width: 150px;
+    font-weight: bold;
+    font-size: 18px;
+}
+.container input[type=text]{
+    border: none;
+    outline: none;
+    margin-bottom: 6px;
+    font-size: 18px;
+}
+.container article {
+    padding: 13px 50px;
+    border-radius: 5px;
+    width: 100%;
+
+    margin-bottom: 25px;
+    line-height: 25px;
+}
+.container > div {
+	padding: 15px;
+	font-size: 20px;
+}
+.container [id^='content_'] {
+	background-color: #FAF4C0;
+}
+
+#listBtn {
+    display: block;
+    width: 168px;
+    height: 52px;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    background-color: #FFDF24;
+    font-size: 20px;
+    float: right;
+    margin: 0 50px;
+}
+#listBtn:hover {
+	background-color: #FFCD12;
+	cursor: pointer;
+}
+
+#orderList {
+	line-height: 35px;
+    font-size: 16px;
+}
+
+.info_title {
+	font-size: 30px;
+    font-weight: 600;
+    line-height: 45px;
+    margin-bottom: 30px;
+	
+}
