--- a/src/main/webapp/css/admin_order_list.css
+++ b/src/main/webapp/css/admin_order_list.css
@@ -1,30 +1,97 @@
 @charset "UTF-8";
+
+.container {
+    margin: 100px auto;
+    width: 1240px;
+    padding-left: 60px;
+}
+
+.container legend {
+    padding: 10px;
+    font-size: 25px;
+}
+
 .search {
-		display: flex;
-		margin-top: 50px;
-		justify-content: flex-start;
-	}
-	#order_status {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-		width: 770px;
-		height: 70px;
-		padding-left: 50px;
-		padding-right: 50px;
-	}
+	display: flex;
+	margin-top: 50px;
+	justify-content: flex-start;
+}
+#order_status {
+	display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 770px;
+    height: 98px;
+    padding-left: 50px;
+    padding-right: 50px;
+    margin: 0 auto;
+}
+
+#order_status h2 {
 	
-	#order_status h2 {
-		
-		height: 50px;
-		font-size: 25px;
-		padding-top: 12px;
-		align-items: center;
-	}
-	fieldset {
-		width: 800px;
-		padding: 10px;
-		border-radius: 10px;
-		border: 2px solid #ccc;
-	}
+	height: 50px;
+	font-size: 25px;
+	padding-top: 12px;
+	align-items: center;
+}
+fieldset {
+	width: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    border: 2px solid #FFDF24;
+}
 	
+.container table {
+    margin-top: 30px;
+    margin-bottom: 50px;
+    width: 100%;
+    text-align: center;
+    border: 1px solid #ececec;
+    border-collapse: collapse;
+    border-radius: 10px;
+    line-height: 23px;
+    font-size: 15px;
+}
+
+.container table tr:hover {
+    background-color: #ffdf243b;
+}
+
+.container table th {
+    background-color: #f7f7f7;
+}
+
+.container table th, td {
+    padding: 10px;
+}
+
+.admin_memlist_select {
+    width: 132px;
+    height: 36px;
+    font-size: 18px;
+    padding: 0 10px;
+    margin-right: 10px;
+}
+
+#search_val {
+    width: 300px;
+    padding: 0 5px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
