관리자 네비 너비 수정했습니당

--- a/src/main/webapp/css/admin.css
+++ b/src/main/webapp/css/admin.css
@@ -146,6 +146,7 @@ header {
 .admin_nav_list {
     margin-bottom: 12px;
     transition: .2s ease; 
+    width: 180px;
 }
 
 .admin_nav_list a:hover {
