--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -30,6 +30,10 @@ a:visited {
 a, input[type=button], button, input[type=submit] {
   cursor: pointer;
 }
+input:focus{
+	border: 2px solid  #ffcd32;
+}
+
 /* 로그인 */
 .login_all {
 	margin: 0px auto;
@@ -42,6 +46,10 @@ a, input[type=button], button, input[type=submit] {
 #login {
 	margin: 30px;
 }
+#checklogin:hover{
+	cursor: pointer;
+}
+
 
 #log_img {
 	width: 50px;
@@ -84,7 +92,9 @@ a, input[type=button], button, input[type=submit] {
 	font-size: 15px;
 	color: #787878;
 }
-
+.loginsubmit:hover{
+	background-color: #969696;
+}
 
 
 #p1 {
@@ -102,7 +112,9 @@ a, input[type=button], button, input[type=submit] {
 	text-align: left;
 	font-size: 15px;
 }
-
+#inp:focus{
+	border: 2px solid #ffcd32;
+}
 #fin {
 	width: 300px;
 	height: 50px;
