--- a/src/main/webapp/css/itemDetail.css
+++ b/src/main/webapp/css/itemDetail.css
@@ -516,5 +516,16 @@ html {
 	color: red;
 }
 
+.nowbuy_Quick {
+	width: -webkit-fill-available;
+	height: 50px;
+	margin: 25px 0;
+	border: none;
+	border-radius: 6px;
+	font-size: 14px;
+	cursor: pointer;
+	background-color: #ffd324;
+	
+}
 
 
