--- a/src/main/webapp/css/mypage_orderHistoryDetail.css
+++ b/src/main/webapp/css/mypage_orderHistoryDetail.css
@@ -226,3 +226,34 @@ mypage_orderHistoryDetail_del_span_l{
 	color: #aaaaaa;
 	padding-top: 10px;
 }
+#mypage_orderHistoryDetail_tltle_del_h4{
+/* 	float: right; */
+}
+.mypage_textarea{
+	width: 200px;
+	height: 100px;
+	margin-top: 20px;
+/* 	float: left; */
+}
+.mypage_tbody{
+	font-size: 15px;
+	font-weight: 500;
+}
+.mypage_div{
+	font-size: 15px;
+	font-weight: 500;
+	width: 750px;
+	height: 100px;
+}
+.mypage_button{
+	background: #ffcd32;
+	border: none;
+	border-radius: 5px;
+	width: 300px;
+	height: 50px;
+	margin: 20px;
+	font-weight: 700;
+	font-size: 15px;
+	color: #222;
+	margin-left: 200px;
+}
